UI: fix alignment of top bar border with yellow bottom border

--- a/src/css/global/menu.scss
+++ b/src/css/global/menu.scss
@@ -3,20 +3,20 @@
 
 .menu-selection {
 	@extend %tab;
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    position: relative;
+	display: flex;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	position: relative;
 	width: 100%;
 
 	li {
 		position: relative;
-		top: 1px;
+		top: 2px;
 	}
 
 	.selected {
 		color: $yellow03;
-    	border-bottom: 1px solid;
+		border-bottom: 1px solid;
 	}
 }
